--- a/client/src/components/manage/Manage.css
+++ b/client/src/components/manage/Manage.css
@@ -1,43 +1,82 @@
-.main-page{
+.main-page {
     background-color: rgb(253, 238, 218);
     min-height: 100vh;
     max-height: auto;
 }
-.manage-main{
-    gap:0.6rem;
+
+.manage-main {
+    gap: 0.6rem;
 }
-.manage-card{
-    width:70%;
+
+.manage-card {
+    width: 70%;
 }
-.manage-box{
-    gap:1rem;
-    > .manage-btn{
-        > button:first-child {
-            border:1px solid lightgray;
-            height:2rem;
-            border-radius: 4px;
-            background-color: white;
-            color: darkorange;
-        }
-        > button:nth-child(2) {
-            border:1px solid lightgray;
-            height:2rem;
-            margin-left:5px;
-            padding-bottom: 30px;
-            border-radius: 4px;
-            background-color: darkorange;
-            color: white;
-        }
-    }
+
+.manage-box {
+    gap: 1rem;
 }
-.cardsecm{
+
+.edt-btn {
+    border: 1px solid lightgray;
+    height: 2rem;
+    border-radius: 4px;
+    background-color: white;
+    color: darkorange;
+}
+
+.del-btn {
+    border: 1px solid lightgray;
+    height: 2rem;
+    margin-left: 5px;
+    padding-bottom: 30px;
+    border-radius: 4px;
+    background-color: darkorange;
+    color: white;
+}
+
+.cardsecm {
     border: 1px solid gray;
     border-radius: 14px;
-    padding:8px;
+    padding: 8px;
 }
-.manage-csec{
-    gap:2rem;
+
+.manage-csec {
+    gap: 2rem;
 }
-.prop-id{
+
+.prop-id {
     font-size: 12px;
+}
+
+.ref-btn {
+    padding: 0px;
+    height: 2rem;
+    background-color: rgb(11, 205, 11);
+    color: white;
+}
+
+.active-label {
+    border-radius: 10px;
+    font-size: small;
+}
+
+@media (max-width: 991px) {
+    .active-label {
+        height: 1.7rem;
+        border-radius: 10px;
+        font-size: small;
+    }
+
+    .repost-btn {
+        height: 2rem !important;
+    }
+}
+
+@media (min-width: 300px) and (max-width: 750px) {
+    .manage-box{
+        gap:0.5rem;
+    }
+    .del-btn{
+        margin-left: 0px;
+    }
 }
