--- a/client/src/components/profile/Profile.css
+++ b/client/src/components/profile/Profile.css
@@ -1,77 +1,153 @@
-.profile-bg{
+.profile-bg {
     background-color: darkorange;
 }
-.p-cont-box{
-    height:2rem;
-    width:100%;
-    height:100%;
-    padding:10px;
+
+.p-cont-box {
+    height: 2rem;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
     background-color: white;
     box-shadow: 2px 2px 5px;
 }
-.p-itm{
+
+.p-itm {
     background-color: white;
     height: 2rem;
     text-align: center;
     cursor: pointer;
     font-weight: bold;
     font-size: 1.1rem;
-    border-bottom:solid transparent;
+    border-bottom: solid transparent;
     transform: border-color 0.5s;
 }
-.p-itmcol{
+
+.p-itmcol {
     border-bottom-color: darkorange;
 }
-.p-itm:hover{
+
+.p-itm:hover {
     border-bottom-color: darkorange;
 }
-.choice-btn1{
-    border:2px solid darkorange;
-    border-bottom:none;
-    border-right:none;
+
+.choice-btn1 {
+    border: 2px solid darkorange;
+    border-bottom: none;
+    border-right: none;
     border-top-left-radius: 4px;
-    color:darkorange;
+    color: darkorange;
     cursor: pointer;
 }
-.choice-btn2{
-    border:2px solid darkorange;
-    border-bottom:none;
+
+.choice-btn2 {
+    border: 2px solid darkorange;
+    border-bottom: none;
     border-top-right-radius: 4px;
-    color:darkorange;
+    color: darkorange;
     cursor: pointer;
 }
-.pr-main-box{
-    height:80vh;
+
+.pr-main-box {
+    width: 100%;
+    height: 70vh;
 }
-.form-control{
-    border:1px solid rgb(179, 178, 178);
+
+.tab-div {
+    width: 80%;
 }
-.pr-cont{
+
+.form-control {
+    border: 1px solid rgb(179, 178, 178);
+}
+
+.pr-cont {
     border: 1px solid gray;
     border-radius: 4px;
-    width:50%;
+    width: 75%;
 }
-.pr-pcode{
-    width:5rem;
+
+.pr-pcode {
+    width: 4rem;
 }
-.profile-btn{
+
+.profile-btn {
     background-color: darkorange;
-    color:white;
+    color: white;
 }
-.profile-btn:hover{
+
+.profile-btn:hover {
     background-color: darkorange;
-    color:white;
+    color: white;
 }
-.eye-icon-pass{
-    cursor:pointer;
-    border:1px solid gray;
+
+.eye-icon-pass {
+    cursor: pointer;
+    border: 1px solid gray;
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
-.pass-inp{
+
+.pass-inp {
     border-top-right-radius: 0px;
     border-bottom-right-radius: 0px;
 }
-.perror-txt{
+
+.perror-txt {
     font-size: small;
+}
+
+.coin-div {
+    width: 50%;
+}
+
+.coin-box {
+    border: 1px solid;
+    width: 40%;
+    border-radius: 10px;
+    box-shadow: 0px 0px 2px;
+}
+
+.coin-box>div:first-of-type {
+    color: darkorange;
+}
+
+.coin-img {
+    height: 5rem;
+    width: 5rem;
+}
+
+@media (max-width: 991px) {
+    .coin-box {
+        height: 35% !important;
+        width: 70%;
+        margin-top: 5rem !important;
+    }
+
+    .tab-div {
+        width: 90%;
+    }
+
+    .pr-cont {
+        width: 92%;
+    }
+}
+
+@media (min-width: 300px) and (max-width: 750px) {
+    .coin-div {
+        width: 100%;
+    }
+    .pr-main-box{
+        height:50vh;
+    }
+    .coin-box {
+        width:50%;
+        margin-top: 2rem !important;
+        margin-left: 0px !important;
+    }
+
+    .coin-img {
+        margin-top: 1rem;
+        height: 3rem;
+        width: 3rem;
+    }
 }
