--- a/client/src/components/product/Product.css
+++ b/client/src/components/product/Product.css
@@ -196,6 +196,17 @@
 .swiper-slide{
     margin-right: 25px !important;
 }
+@media (min-width: 1024px){
+    .pro-main{
+        justify-content: center;
+    }
+    .loan-card{
+        width:13rem !important;
+    }
+    .recomm-card {
+        width:100% !important;
+    }
+}
 @media (max-width: 991px) {
     .recomm-card {
         max-width: 16rem !important;
@@ -204,6 +215,19 @@
     }
     .mySwiper{
         width:50rem !important;
+    }
+    .swiper-slide{
+        margin-right: 26px !important;
+    }
+}
+@media (max-width: 801px) {
+    .recomm-card {
+        max-width: 15rem !important;
+        min-width: 10rem !important;
+        margin-right: 0px !important;
+    }
+    .mySwiper{
+        width:97vw !important;
     }
     .swiper-slide{
         margin-right: 26px !important;
