--- a/client/src/components/login/Login.css
+++ b/client/src/components/login/Login.css
@@ -111,8 +111,11 @@
 }
 @media (min-width: 300px) and (max-width: 750px) {
     .google-cont{
+        > div:nth-child(1){
+            width:48%;
+        }
         > div:nth-child(2){
-            width:45%;
+            width:49%;
         }
     }
     .log-cont-box{
